--- a/.github/workflows/macos_editor_3.yml
+++ b/.github/workflows/macos_editor_3.yml
@@ -2,8 +2,6 @@ name: Build_macos_editor_3
 
 on:
   push:
-    paths:
-      - '**.js'
   # schedule:
   #   - cron: '0 0 * * 0'
 
@@ -19,7 +17,7 @@ jobs:
         run: |
           brew update
           brew install emscripten scons yasm
-          git clone --depth 1 --branch 3.6 --recursive https://github.com/godotengine/godot
+          git clone --depth 1 --branch 3.5.3-stable --recursive https://github.com/godotengine/godot
           cd godot
           echo "version=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           curl -fsSL -JO https://github.com/mauville-technologies/godot_dragonbones/archive/a1387eea95c68d988e4868b2affc6a48cf1506b2.zip
