--- a/.github/workflows/macos_editor_4.yml
+++ b/.github/workflows/macos_editor_4.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   macos_build:
     name: macOS Build
-    runs-on: "macos-15"
+    runs-on: "macos-latest"
     steps:
       - name: "checkout repo"
         uses: actions/checkout@v4
